# beyond-the-streetlight

./: .dockerignore  .gitignore  AI_REPOSITORY_DESCRIPTION.md  CITATION.cff  Dockerfile  FRED_scraped.xlsx  GB.csv  GBweb_parsed.xlsx  README.md  REMARK.md  RS100_Discussion_Slides.ipynb  RS100_Discussion_Slides.slides.html  SPF.csv  SPFweb_parsed.xlsx  beyond-the-streetlight.md  docker-compose.yml  docker-run.sh  index.html  install.sh  parse_raw_data.py  pyproject.toml  reproduce.sh  reproduce_min.sh  reproduce_requirements.md  run_analysis.sh
.devcontainer/: README.md  devcontainer.json
.github/workflows/: ci.yml  remark-validation.yml
binder/: environment.yml
code/: abse_reg.py  annual_forecasts.py  compute_abs_error.py  diff_abse_reg.py  diff_error_reg.py  diff_sqe_reg.py  error_reg.py  forecast_errors.py  merge_data.py  parse_GB_raw_data.py  parse_SPF_raw_data.py  produce_graphs.py  reproduce.py  scrape_FRED_data.py  sqe_reg.py  time_series_reg.py  xGR_diff_sqe_reg.py  xGR_sqe_reg.py
code/main/: abse_reg.py  parse_GB_raw_data.py  parse_SPF_raw_data.py  reproduce.py  scrape_FRED_data.py
code/other/: compute_errors.py  diff_sqe_reg.py  (+4 more)
data/: GBweb_Row_Format.xlsx
paper/: .~lock.RS100 Measurement 24Oct23.docx#  RS100 Measurement 24Oct23.docx  RS100-Nontraditional_Data_Oct27.docx
results/: abse_reg_1983.txt  abse_reg_1995.txt  diff_abse_reg_1983.txt  diff_abse_reg_1995.txt  diff_sqe_reg_1983.txt  diff_sqe_reg_1995.txt  sqe_reg_1983.txt  sqe_reg_1995.txt  xGR_diff_sqe_reg_1983.txt  xGR_diff_sqe_reg_1995.txt  xGR_sqe_reg_1983.txt  xGR_sqe_reg_1995.txt
(+8 files in other folders)
