[tool.poetry]
name = "beyond-the-streetlight"
version = "1.0.5"
description = "Replication materials for 'Beyond the Streetlight' economic forecasting analysis"
authors = ["Econ-ARK Team"]
readme = "README.md"
packages = [{include = "code"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^4.0.8"
matplotlib = "^3.8.1"
numpy = "^1.26.0"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
fredapi = "^0.4.2"
statsmodels = "^0.14.0"
pandas-datareader = "^0.10.0"
fredpy = "^3.2.8"
pyarrow = "^14.0.0"  # Added to resolve pandas warning
ipython = "^8.0.0"   # Added for notebook execution

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
reproduce = "code.main.reproduce:main" 